<resources>
    <string name="app_name">M. Idriss</string>
    <string name="prof_name">M/Idriss Mohammed</string>
    <string name="prof_num">01142995768\n01158646646</string>
    <string name="start">Start</string>
    <string name="lessons">Lessons</string>
    <string name="exams">Exams</string>
    <string name="exam_code">Enter exam code</string>
    <string name="code">Code</string>
    <string name="exam">Exam</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="answer">Answer</string>
    <string name="details_exam1">1- Exam (1) \n  25 Questions \n 40 Minutes</string>
    <string name="details_exam2">1- Exam (2) \n  3 Questions \n 40 Minutes</string>
    <string name="details_exam3">1- Exam (3) \n  3 Questions \n 40 Minutes</string>
    <string name="details_exam4">1- Exam (4) \n  3 Questions \n 40 Minutes</string>
    <string name="details_exam5">1- Exam (5) \n  3 Questions \n 40 Minutes</string>
    <string name="question">Question (%1$d)</string>
    <string name="result">Result</string>
</resources>